Added the contents of the page.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>QR-code-component</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="content">
+            <div class="qr-code">
+                <img src="qr-code.png" alt="image of a qr-code">
+            </div>
+            <div class="topic">
+                Improve your front-end <br>
+                skills by building projects<br>
+            </div>
+
+            <p>
+                Scan the QR code to visit Frontend<br>
+                Mentor and take your coding skills to <br>
+                the next level.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
