Centered the contents in the container.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="content">
             <div class="qr-code">
-                <img src="qr-code.png" alt="image of a qr-code">
+                <img src="qr-code.png" alt="image of a qr-code" class="qr-code">
             </div>
             <div class="topic">
                 Improve your front-end <br>
